# desafio-supera-ecommerce

./: .env.model  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: django.yml
apps/account/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/account/tests/: conftest.py  factories.py  test_models.py
apps/order/: admin.py  models.py  serializers.py  urls.py  views.py
apps/order/migrations/: 0001_initial.py  0002_alter_checkout_number.py
apps/order/tests/: conftest.py  factories.py  test_models.py  test_views.py
apps/store/: admin.py  models.py  serializers.py  urls.py  views.py
apps/store/management/commands/: load_products.py
apps/store/migrations/: 0001_initial.py
apps/store/tests/: factories.py
main/: settings.py  urls.py  utils.py
